Fixed responsiveness of genres on mobile

--- a/styles/portfolio_styles.css
+++ b/styles/portfolio_styles.css
@@ -11,17 +11,17 @@
 .btn-group {
     margin: 0 auto !important;
     display: block !important;
-    width: fit-content;
+    /* width: fit-content;
     width: -moz-max-content;
-    width: -webkit-max-content;
+    width: -webkit-max-content; */
 }
 
 .btn-group > .btn.btn-light {
-    margin: 0 4px;
     transition: 0.2s;
     color: #212529;
     text-transform: uppercase;
     font-size: 14px;
+    border: 4px solid white !important;
     border-radius: 3px !important;
 }
 
@@ -38,6 +38,7 @@
 .btn-group > .btn:hover {
     color: #212529 !important;
     border: none !important;
+    border: 0px solid white !important;
 }
 
 .btn, .btn-light {
